force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__CAQHIdentifierText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CAQHIdentifierText__c</fullName>
    <label>ConclforAffrdQltyHlthcrId</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CAQHIdentifierText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>