force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__EHRSystemName__c.field-meta.xml
<CustomField>
    <fullName>ssot__EHRSystemName__c</fullName>
    <label>Electronic Health Records System Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EHRSystemName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>