force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__HasCarrierContract__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasCarrierContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Carrier Contract</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasCarrierContract</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>