force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__HealthcareProviderType__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcareProviderType__c</fullName>
    <label>Healthcare Provider Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcareProviderType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>