force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__ProviderClass__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProviderClass__c</fullName>
    <label>Provider Class</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProviderClass</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>