force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__ProviderServiceOrgAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProviderServiceOrgAccountId__c</fullName>
    <label>Provider Service Org Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProviderServiceOrgAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>