force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__ReferredByContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferredByContactId__c</fullName>
    <label>Referred By Contact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferredByContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>