force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__rel_1716725809430_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725809430_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcareProvider_RelatedUserId_map_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>HealthcareProvider_RelatedUserId_map_rel</relationshipLabel>
    <relationshipName>rel_1716725809430_end</relationshipName>
    <type>Lookup</type>
</CustomField>