force-app/main/default/objects/ssot__HealthcareProvider__dlm/fields/ssot__ShouldExcludeFromSearch__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShouldExcludeFromSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should Exclude From Search</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShouldExcludeFromSearch</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>